<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dmstaskmanager.maintask">
    <item
        android:id="@+id/action_flats"
        android:orderInCategory="100"
        android:title="@string/action_flats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_credit"
        android:orderInCategory="200"
        android:title="@string/action_goto_credit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleteAll"
        android:orderInCategory="400"
        android:title="@string/action_deleteAll"
        app:showAsAction="never" />
</menu>
