<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmstaskmanager.CreditItemActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAddNewCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickAdd"
            android:layout_weight="1"
            android:text="@string/credit_item_button_add" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickCancel"
            android:layout_weight="1"
            android:text="@string/credit_item_button_cancel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLabel"
            android:text="@string/credit_item_name" />


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/credit_item_name"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorLabel"
                android:layout_gravity="left|center"
                android:text="@string/credit_item_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="5dp"
                android:hint="@string/credit_item_date"
                android:onClick="setDate"
                android:inputType="textPersonName|date" />

            <Button
                android:id="@+id/btSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/my_calendar_1"
                android:text="..."
                android:onClick="setDate"
                android:layout_marginLeft="2dp"
                android:hint="@string/credit_item_date"
                />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSumma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorLabel"
                android:text="@string/credit_item_summa" />

            <EditText
                android:id="@+id/etSumma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_summa" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProcent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLabel"
                android:text="@string/credit_item_procent" />

            <EditText
                android:id="@+id/etProcent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_procent" />

            <TextView
                android:id="@+id/tvPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLabel"
                android:layout_marginLeft="5dp"
                android:text="@string/credit_item_perion" />

            <EditText
                android:id="@+id/etPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_perion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSummaPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/colorLabel"
                android:text="@string/credit_item_summa_pay" />

            <EditText
                android:id="@+id/etSummaPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginLeft="5dp"
                android:inputType="numberDecimal"
                android:hint="@string/credit_item_summa_pay" />

        </LinearLayout>

        <Switch
            android:id="@+id/swFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorLabel"
            android:text="@string/credit_item_finish" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
