<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmstaskmanager.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btAddNewCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickAdd"
                android:layout_weight="1"
                android:text="@string/credit_item_button_add" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickCancel"
                android:layout_weight="1"
                android:text="@string/credit_item_button_cancel" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_new"
            android:layout_gravity="right"
            android:gravity="right|bottom"
            android:textStyle="bold|italic"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="10sp"
            android:text="@string/credit_item_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLabel"
                android:textStyle="bold|italic"
                android:textSize="16sp"
                android:text="@string/credit_item_name" />

            <TextView
                android:id="@+id/tvParam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorLabel"
                    android:layout_gravity="left|center"
                    android:text="@string/credit_payment_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:hint="@string/credit_item_date"
                        android:onClick="setDate"
                        android:inputType="textPersonName|date" />

                    <Button
                        android:id="@+id/btSetDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/my_calendar_1"
                        android:layout_weight="1"
                        android:text="..."
                        android:onClick="setDate"
                        android:layout_marginLeft="2dp"
                        android:hint="@string/credit_item_date"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSumma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/colorLabel"
                    android:text="@string/credit_payment_summa" />

                <EditText
                    android:id="@+id/etSumma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_marginLeft="5dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/credit_payment_summa" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSumma_credit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorLabel"
                        android:text="@string/credit_payment_summa_credit" />

                    <EditText
                        android:id="@+id/etSumma_credit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/credit_payment_summa_credit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSumma_procent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorLabel"
                    android:text="@string/credit_payment_summa_procent" />

                <EditText
                    android:id="@+id/etSumma_procent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginLeft="5dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/credit_payment_summa_procent" />

            </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#7b7b7b"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSumma_addon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="left|center"
                    android:textColor="@color/colorLabel"
                    android:text="@string/credit_payment_summa_addon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                <EditText
                    android:id="@+id/etSumma_addon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_marginLeft="5dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/credit_payment_summa_addon" />

                <Button
                    android:id="@+id/btAddonSum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickAddonSumm"
                    android:layout_weight="4"
                    android:text="S" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSumma_plus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorLabel"
                    android:text="@string/credit_payment_summa_plus" />

                <EditText
                    android:id="@+id/etSumma_plus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/credit_payment_summa_plus" />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSumma_minus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorLabel"
                    android:text="@string/credit_payment_summa_minus" />

                <EditText
                    android:id="@+id/etSumma_minus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_marginLeft="5dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/credit_payment_summa_minus" />

            </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
