<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dmstaskmanager.graphic.GraphicActivity">

<!--
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <Button
                android:id="@+id/btTotoolbarOK"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:layout_graviti="right"
                android:text="OK"
                >


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
-->

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.dmstaskmanager.graphic.GraphicActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickAdd"
                    android:layout_weight="1"
                    android:text="@string/credit_item_button_add" />

                <Button
                    android:id="@+id/btCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onClickCancel"
                    android:layout_weight="1"
                    android:text="@string/credit_item_button_cancel" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                >


                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLabel"
                    android:textStyle="bold|italic"
                    android:textSize="16sp"
                    android:text="@string/credit_item_name" />

                <TextView
                    android:id="@+id/tvParam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_marginLeft="5dp"
                            android:hint="@string/graphic_date_beg"
                            android:onClick="setDate"
                            android:inputType="textPersonName|date" />

                        <Button
                            android:id="@+id/btSetDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/my_calendar_1"
                            android:layout_weight="1"
                            android:text="..."
                            android:onClick="setDate"
                            android:layout_marginLeft="2dp"
                            android:hint="@string/graphic_date_beg"
                            />

                    </LinearLayout>


                    <EditText
                        android:id="@+id/etSummaPay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:layout_marginLeft="5dp"
                        android:inputType="numberDecimal"
                        android:hint="@string/graphic_summa_pay" />

                </LinearLayout>


                <Button
                    android:id="@+id/btExec"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/graphic_exec"
                    android:onClick="execGraphic"
                    android:layout_marginLeft="2dp"
                    />

            </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                >

                <ListView
                    android:id="@+id/lvGraphic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </ListView>

            </LinearLayout>

        </LinearLayout>



    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>


